Fix: Improving Hexagonal Architecture with Entity Handling